# py-contract-codegen

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/py_contract_codegen/: cli.py
src/py_contract_codegen/modules/: abi.py  code_generator.py  enums.py  etherscan.py  exceptions.py
src/py_contract_codegen/template/: contract.web3.jinja2  contract.web3_v6.jinja2  contract.web3_v7.jinja2
src/py_contract_codegen/tests/: test_cli.py
src/py_contract_codegen/tests/core/: test_abi.py  test_code_generator.py
src/py_contract_codegen/tests/modules/: test_abi.py  test_code_generator.py  test_etherscan.py
