[project]
name = "py-contract-codegen"
version = "0.1.0"
description = "A cli tool to generate Python code from EVM ABI."
authors = [{ name = "Naoki Maeda" }]
dependencies = [
    "web3==7.0.0",
    "jinja2>=3.1.4",
    "typer>=0.12.3",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
py-contract-codegen = "py_contract_codegen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.1",
    "mypy>=1.11.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "pytest-env>=1.1.3",
]

[tool.pytest.ini_options]
env = [
    "ETHERSCAN_API_KEY=test_api_key",
]
